--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ version = "0.1.0"
 [dependencies]
 cortex-m = "0.6.3"
 cortex-m-rt = "0.6.12"
-cortex-m-semihosting = "0.3.5"
-panic-semihosting = { version = "0.5.3", features = ["exit"] }
+panic-halt = "0.2.0"
+panic-abort= "0.3.2"
+rtt-target = { version = "0.2.0", features = ["cortex-m"] }
 
 [[bin]]
 name = "new"
@@ -17,6 +18,6 @@ test = false
 bench = false
 
 [profile.release]
-codegen-units = 1 # better optimizations
-debug = true # symbols are nice and they don't increase the size on Flash
-lto = true # better optimizations
+codegen-units = 1
+debug = true
+lto = true
